--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "graphql": "^15.5.3",
     "next": "^11.1.2",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "simple-oauth2": "^4.3.0"
   }
 }
