--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
     "graphql": "^15.5.3",
     "graphql-request": "^3.7.0",
