--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,3 @@
-#environment variables
-.env.local
-.DS_Store
-
 # Logs
 logs
 *.log
@@ -74,6 +70,7 @@ typings/
 
 # dotenv environment variables file
 .env
+.env.local
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
@@ -106,3 +103,6 @@ dist
 
 # TernJS port file
 .tern-port
+
+# VS Code
+.DS_Store
