--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/lab": "^5.0.0-alpha.67",
+    "@mui/material": "^5.4.0",
+    "dayjs": "^1.10.7",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
     "graphql": "^15.5.3",
