--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@date-io/date-fns": "^1.3.13",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
-    "@mui/lab": "^5.0.0-alpha.67",
+    "@material-ui/core": "^4.12.3",
+    "@material-ui/pickers": "^3.3.10",
+    "@mui/lab": "^5.0.0-alpha.73",
     "@mui/material": "^5.4.0",
-    "dayjs": "^1.10.7",
+    "date-fns": "^2.28.0",
     "echarts": "^5.3.0",
     "echarts-for-react": "^3.0.2",
     "graphql": "^15.5.3",
