--- a/.gitignore
+++ b/.gitignore
@@ -34,6 +34,9 @@ bower_components
 # node-waf configuration
 .lock-wscript
 
+# no yarn.lock
+yarn.lock
+
 # Compiled binary addons (https://nodejs.org/api/addons.html)
 build/Release
 
