--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-grid-system": "^8.1.3",
     "simple-oauth2": "^4.3.0"
   }
 }
