--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "graphql-tag": "^2.12.6",
     "next": "^11.1.2",
     "react": "17.0.2",
+    "react-bootstrap": "^2.2.1",
     "react-dom": "17.0.2",
     "react-grid-system": "^8.1.3",
     "simple-oauth2": "^4.3.0"
