--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "format": "prettier --write ."
   },
   "dependencies": {
     "@date-io/date-fns": "^1.3.13",
@@ -26,5 +27,8 @@
     "react-bootstrap": "^2.2.1",
     "react-dom": "17.0.2",
     "simple-oauth2": "^4.3.0"
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
