--- a/package.json
+++ b/package.json
@@ -9,26 +9,28 @@
     "format": "prettier --write ."
   },
   "dependencies": {
-    "@date-io/date-fns": "^1.3.13",
-    "@emotion/react": "^11.7.1",
-    "@emotion/styled": "^11.6.0",
-    "@material-ui/core": "^4.12.3",
+    "@date-io/date-fns": "^2.14.0",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@material-ui/pickers": "^3.3.10",
-    "@mui/lab": "^5.0.0-alpha.73",
-    "@mui/material": "^5.4.0",
+    "@mui/lab": "^5.0.0-alpha.89",
+    "@mui/material": "^5.8.7",
     "date-fns": "^2.28.0",
-    "echarts": "^5.3.0",
+    "echarts": "^5.3.3",
     "echarts-for-react": "^3.0.2",
-    "graphql": "^15.5.3",
-    "graphql-request": "^3.7.0",
+    "graphql": "^16.5.0",
+    "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.6",
-    "next": "^11.1.2",
-    "react": "17.0.2",
-    "react-bootstrap": "^2.2.1",
-    "react-dom": "17.0.2",
+    "next": "^12.2.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.4.0",
+    "react-dom": "^18.2.0",
     "simple-oauth2": "^4.3.0"
   },
   "devDependencies": {
+    "eslint": "^8.19.0",
+    "eslint-config-next": "^12.2.0",
     "prettier": "^2.7.1"
   }
 }
