chore: add prettier to run on .css files

--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
       "prettier --write",
       "eslint --fix"
     ],
+    "**/*.css": [
+      "prettier --write"
+    ],
     "**/*.md": [
       "prettier --write"
     ],
