--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "format": "prettier --write .",
     "lint": "eslint --fix .",
     "prepare": "husky install",
-    "gitlog": "git log origin..HEAD --reverse --format=\"✅ %s %N%n\" > git-log.txt && code git-log.txt"
+    "gitlog": "git log origin..HEAD --reverse --format=\"✅ %s%n%b %N%n\" > git-log.txt && code git-log.txt"
   },
   "lint-staged": {
     "**/*.{js,jsx,ts,tsx}": [
