--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,6 +1,3 @@
 {
-  "extends": "next/core-web-vitals",
-  "rules": {
-    "space-before-function-paren": ["warn", "always"]
-  }
+  "extends": "next/core-web-vitals"
 }
