--- a/package.json
+++ b/package.json
@@ -35,9 +35,9 @@
     "@material-ui/pickers": "^3.3.10",
     "@mui/lab": "^5.0.0-alpha.89",
     "@mui/material": "^5.8.7",
+    "@propeldata/react-counter": "^0.26.6",
+    "@propeldata/react-time-series": "^0.29.9",
     "date-fns": "^2.28.0",
-    "echarts": "^5.3.3",
-    "echarts-for-react": "^3.0.2",
     "graphql": "^16.5.0",
     "graphql-request": "^4.3.0",
     "graphql-tag": "^2.12.6",
