--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
+    "react-table": "^7.8.0",
     "simple-oauth2": "^4.3.0"
   },
   "devDependencies": {
